# ai-running-coach

./: .gitignore  README.md  fix_node_compatibility.py  pyvenv.cfg
.github/workflows/: frontend-ci.yml
backend/: Makefile  pyproject.toml
backend/app/: main.py  models.py
backend/app/core/: config.py
backend/app/services/: ai_coach.py  garmin_service.py
backend/tests/: conftest.py  test_api.py  test_services.py
frontend/: Makefile  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/__tests__/: Dashboard.test.tsx
frontend/app/: layout.tsx  page.tsx
frontend/components/analysis/: AIReport.tsx  RunChart.tsx
frontend/components/metrics/: StatCard.tsx
frontend/hooks/: useRunningData.ts
frontend/lib/: types.ts  utils.ts
