[tool.poetry]
name = "ai-running-coach"
version = "0.1.0"
description = "AI Powered Running Coach"
authors = ["Senior Dev <misolkim94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
garminconnect = "^0.2.0"
openai = "^1.12.0"
python-dotenv = "^1.0.0"
black = "^25.12.0"
pydantic-settings = "^2.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]